--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,19 +3,28 @@
           package="com.john.ankotlin">
 
     <application
+            android:name=".MyApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:name=".MyApp"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.MeasureLearnActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.CircleProgressActivity">
+
+        </activity>
+        <activity android:name=".ui.ConstraintPlaceholderActivity">
+        </activity>
+        <activity android:name=".elec.ElecActivity">
+        </activity>
+        <activity android:name=".MainActivity">
         </activity>
     </application>
 
