--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,21 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+ext.anko_version='0.10.8'
+
+ext {
+    buildToolsVersion = "28.0.3"
+    androidxCoreVersion = "1.0.0"
+    androidxCompatVersion = "1.0.0"
+    androidxFragmentVersion = "1.1.0-alpha04"
+    coreVersion = "1.2.1-alpha01"
+    extJUnitVersion = "1.1.2-alpha01"
+    runnerVersion = "1.3.0-alpha01"
+    rulesVersion = "1.3.0-alpha01"
+    espressoVersion = "3.3.0-alpha01"
+    robolectricVersion = "4.3"
+    truthVersion = "0.42"
+    constraintlayout = "1.1.3"
+}
+
+
