--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api "androidx.appcompat:appcompat:$androidxCompatVersion"
@@ -39,5 +41,9 @@ dependencies {
     androidTestImplementation 'com.google.truth:truth:' + rootProject.truthVersion
     androidTestImplementation 'org.robolectric:annotations:' + rootProject.robolectricVersion
     api 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.anggrayudi:android-hidden-api:28.1'
+}
 
+repositories {
+    maven { url 'https://dl.bintray.com/anggrayudi/maven/' }
 }
