--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,33 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.john.ankotlin">
+          package="com.john.kot">
 
     <application
-            android:name=".MyApp"
+            android:name="com.john.kot.MyApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.MeasureLearnActivity">
-
-        </activity>
-        <activity android:name=".ui.CircleProgressActivity">
-
-        </activity>
-        <activity android:name=".ui.ConstraintPlaceholderActivity">
-        </activity>
-        <activity android:name=".elec.ElecActivity">
-        </activity>
-        <activity android:name=".MainActivity">
-        </activity>
-        <activity android:name=".ui.ScrollPickerActivity">
+        <activity android:name="com.john.kot.skin.SkinStaticThemeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name="com.john.kot.ui.GradientActivity">
+        </activity>
+        <activity android:name="com.john.kot.ui.MeasureLearnActivity">
+        </activity>
+        <activity android:name="com.john.kot.ui.CircleProgressActivity">
+        </activity>
+        <activity android:name="com.john.kot.ui.ConstraintPlaceholderActivity">
+        </activity>
+        <activity android:name="com.john.kot.elec.ElecActivity">
+        </activity>
+        <activity android:name="com.john.kot.MainActivity">
+        </activity>
+        <activity android:name="com.john.kot.ui.ScrollPickerActivity">
+
         </activity>
     </application>
 
