--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,37 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.john.kot">
+        package="com.john.kot">
 
     <application
-            android:name="com.john.kot.MyApp"
+            android:name=".MyApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.john.kot.skin.SkinStaticThemeActivity">
+        <activity android:name=".anim.PropertyActivity"></activity>
+        <activity android:name=".ui.ResultBleActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.john.kot.ui.GradientActivity">
-        </activity>
-        <activity android:name="com.john.kot.ui.MeasureLearnActivity">
-        </activity>
-        <activity android:name="com.john.kot.ui.CircleProgressActivity">
-        </activity>
-        <activity android:name="com.john.kot.ui.ConstraintPlaceholderActivity">
-        </activity>
-        <activity android:name="com.john.kot.elec.ElecActivity">
-        </activity>
-        <activity android:name="com.john.kot.MainActivity">
-        </activity>
-        <activity android:name="com.john.kot.ui.ScrollPickerActivity">
-
-        </activity>
+        <activity android:name=".skin.SkinStaticThemeActivity"></activity>
+        <activity android:name=".ui.GradientActivity" />
+        <activity android:name=".ui.MeasureLearnActivity" />
+        <activity android:name=".ui.CircleProgressActivity" />
+        <activity android:name=".ui.ConstraintPlaceholderActivity" />
+        <activity android:name=".elec.ElecActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".ui.ScrollPickerActivity" />
     </application>
 
 </manifest>
