--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.john.ankotlin"
-        minSdkVersion 23
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -19,6 +19,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -42,8 +47,8 @@ dependencies {
     androidTestImplementation 'org.robolectric:annotations:' + rootProject.robolectricVersion
     api 'androidx.cardview:cardview:1.0.0'
     implementation 'com.anggrayudi:android-hidden-api:28.1'
+
+    implementation 'com.comm.util:uploader:'+rootProject.commUtilVersion
+
 }
 
-repositories {
-    maven { url 'https://dl.bintray.com/anggrayudi/maven/' }
-}
