--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,14 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "http://localhost:8081/repository/jhmaven/"
+        }
+//        maven {
+//            url "http://172.86.70.168:8081/repository/jhmaven/"
+//        }
+
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -42,6 +49,7 @@ ext {
     robolectricVersion = "4.3"
     truthVersion = "0.42"
     constraintlayout = "1.1.3"
+    commUtilVersion = "1.0.3"
 }
 
 
