--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:3.5.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,16 +18,17 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenLocal()
+
         google()
         jcenter()
         maven {
             url "http://localhost:8081/repository/jhmaven/"
         }
-//        maven {
-//            url "http://172.86.70.168:8081/repository/jhmaven/"
-//        }
 
         maven { url "https://jitpack.io" }
+
+
     }
 }
 
@@ -49,7 +50,7 @@ ext {
     robolectricVersion = "4.3"
     truthVersion = "0.42"
     constraintlayout = "1.1.3"
-    commUtilVersion = "1.0.3"
+    commUtilVersion = "1.0.7"
 }
 
 
