--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -14,22 +14,22 @@ kapt {
 }
 
 android {
-    compileSdkVersion rootProject.ext.config.compileSdkVersion
-    buildToolsVersion rootProject.ext.config.buildToolsVersion
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
 
     defaultConfig {
-        minSdkVersion rootProject.ext.config.minSdkVersion
-        targetSdkVersion rootProject.ext.config.targetSdkVersion
+        minSdkVersion 21
+        targetSdkVersion 23
         flavorDimensions "versionCode"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        ndk {
-            //设置支持的SO库架构
-            abiFilters 'armeabi', 'armeabi-v7a'
-            //, 'x86_64', 'arm64-v8a','x86',
-        }
-        versionName "0.9.0"
+//        ndk {
+//            //设置支持的SO库架构
+//            abiFilters 'armeabi', 'armeabi-v7a'
+//            //, 'x86_64', 'arm64-v8a','x86',
+//        }
+        versionName "0.9.4"
     }
 
 
@@ -70,7 +70,7 @@ dependencies {
     api 'androidx.legacy:legacy-support-v4:1.0.0'
     api 'androidx.cardview:cardview:1.0.0'
     api 'com.google.android.material:material:1.0.0-rc01'
-    api 'androidx.constraintlayout:constraintlayout:1.1.3'
+//    api 'androidx.constraintlayout:constraintlayout:1.1.3'
     // RxJava 2
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     api 'io.reactivex.rxjava2:rxjava:2.1.15'
@@ -81,17 +81,17 @@ dependencies {
     api 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     api 'com.jakewharton.timber:timber:4.6.0'
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
-    api rootProject.ext.dependencies["arouter_api"]
+//    api rootProject.ext.dependencies["arouter_api"]
     api 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
 //    api files('libs/com.baidu.tts_2.3.2.20180713_6101c2a.jar')
-    api rootProject.ext.dependencies["butterknife"]
-    kapt rootProject.ext.dependencies["butterknife_compiler"]
+//    api rootProject.ext.dependencies["butterknife"]
+//    kapt rootProject.ext.dependencies["butterknife_compiler"]
     //注释掉原有bugly的仓库
     //compile 'com.tencent.bugly:crashreport:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.3.2
-    api 'com.tencent.bugly:crashreport_upgrade:1.2.0'
+//    api 'com.tencent.bugly:crashreport_upgrade:1.2.0'
     //其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.0
-    api 'com.tencent.bugly:nativecrashreport:2.2.0'
+//    api 'com.tencent.bugly:nativecrashreport:2.2.0'
 //    api files('libs/agora-rtc-sdk.jar')
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api files('libs/EncryptSDK.jar')
