--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ android {
     compileSdkVersion 28
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.john.ankotlin"
+        applicationId "com.john.kot"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -30,24 +30,17 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    api "androidx.appcompat:appcompat:$androidxCompatVersion"
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
 
-    androidTestImplementation 'androidx.test:core:' + rootProject.coreVersion
-    androidTestImplementation 'androidx.test.ext:junit:' + rootProject.extJUnitVersion
-    androidTestImplementation 'androidx.test:runner:' + rootProject.runnerVersion
-    androidTestImplementation 'androidx.test.espresso:espresso-core:' + rootProject.espressoVersion
-    androidTestImplementation 'androidx.fragment:fragment-testing:' + rootProject.androidxFragmentVersion
-    androidTestImplementation 'com.google.truth:truth:' + rootProject.truthVersion
-    androidTestImplementation 'org.robolectric:annotations:' + rootProject.robolectricVersion
-    api 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.anggrayudi:android-hidden-api:28.1'
-
-//    implementation project(path: ':androidUtil')
-    implementation "com.android:util:$rootProject.androidUtilVersion"
+    implementation project(path: ':androidUtil')
+//    implementation "com.android:util:$rootProject.androidUtilVersion"
 
 
 }
