--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -29,7 +29,7 @@ android {
 //            abiFilters 'armeabi', 'armeabi-v7a'
 //            //, 'x86_64', 'arm64-v8a','x86',
 //        }
-        versionName "0.9.4"
+        versionName "0.9.7"
     }
 
 
@@ -65,12 +65,18 @@ android {
 }
 
 dependencies {
+    testApi 'junit:junit:4.12'
+    androidTestApi 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestApi 'androidx.test.ext:junit:1.1.1'
+    androidTestApi 'androidx.test:runner:1.1.0'
+    androidTestApi 'androidx.test:rules:1.1.0'
+
+
     api 'androidx.appcompat:appcompat:1.1.0'
     api 'androidx.core:core:1.1.0'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
     api 'androidx.cardview:cardview:1.0.0'
     api 'com.google.android.material:material:1.0.0-rc01'
-//    api 'androidx.constraintlayout:constraintlayout:1.1.3'
     // RxJava 2
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     api 'io.reactivex.rxjava2:rxjava:2.1.15'
@@ -81,18 +87,8 @@ dependencies {
     api 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     api 'com.jakewharton.timber:timber:4.6.0'
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
-//    api rootProject.ext.dependencies["arouter_api"]
     api 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
-//    api files('libs/com.baidu.tts_2.3.2.20180713_6101c2a.jar')
-//    api rootProject.ext.dependencies["butterknife"]
-//    kapt rootProject.ext.dependencies["butterknife_compiler"]
-    //注释掉原有bugly的仓库
-    //compile 'com.tencent.bugly:crashreport:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.3.2
-//    api 'com.tencent.bugly:crashreport_upgrade:1.2.0'
-    //其中latest.release指代最新版本号，也可以指定明确的版本号，例如1.2.0
-//    api 'com.tencent.bugly:nativecrashreport:2.2.0'
-//    api files('libs/agora-rtc-sdk.jar')
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api files('libs/EncryptSDK.jar')
     api files('libs/mina-core-2.0.19.jar')
@@ -102,24 +98,12 @@ dependencies {
 
     api 'com.tencent.mars:mars-xlog:1.2.3'
 
-//    api 'org.greenrobot:greendao:3.2.2'
-//    api 'org.greenrobot:greendao-generator:3.2.2'
-//    api 'com.github.yuweiguocn:GreenDaoUpgradeHelper:v2.0.0'
 
     api "androidx.room:room-rxjava2:$rootProject.roomVersion"
     api "androidx.room:room-runtime:$rootProject.roomVersion"
     api "androidx.room:room-ktx:$rootProject.roomVersion"
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
 
-//    greendao {
-//        schemaVersion 22
-//        daoPackage 'com.android.util.dao'
-//        targetGenDir 'src/main/java'
-//        //单元测试的根目录
-////    targetGenDirTests 'src/androidTest/java'
-////            generateTests true
-//
-//    }
 
 }
 
