--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,14 +29,22 @@ android {
 }
 
 dependencies {
+    testApi 'junit:junit:4.12'
+    androidTestApi 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestApi 'androidx.test.ext:junit:1.1.1'
+    androidTestApi 'androidx.test:runner:1.1.0'
+    androidTestApi 'androidx.test:rules:1.1.0'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+
+
+
+
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
 
     implementation project(path: ':androidUtil')
