--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -1,7 +1,4 @@
 apply plugin: 'com.android.library'
-//apply plugin: 'com.jakewharton.butterknife'
-
-//apply plugin: 'org.greenrobot.greendao' // apply plugin
 
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
@@ -29,7 +26,7 @@ android {
 //            abiFilters 'armeabi', 'armeabi-v7a'
 //            //, 'x86_64', 'arm64-v8a','x86',
 //        }
-        versionName "0.9.7"
+        versionName "0.9.3"
     }
 
 
@@ -86,11 +83,10 @@ dependencies {
     api 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     api 'com.jakewharton.timber:timber:4.6.0'
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
-    api 'com.github.bumptech.glide:glide:4.9.0'
-    kapt 'com.github.bumptech.glide:compiler:4.9.0'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api files('libs/EncryptSDK.jar')
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.1'
+//    api 'com.github.bumptech.glide:glide:4.9.0'
+//    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
     api files('libs/mina-core-2.0.19.jar')
     implementation 'org.slf4j:slf4j-api:1.7.21'
 
@@ -99,10 +95,10 @@ dependencies {
     api 'com.tencent.mars:mars-xlog:1.2.3'
 
 
-    api "androidx.room:room-rxjava2:$rootProject.roomVersion"
-    api "androidx.room:room-runtime:$rootProject.roomVersion"
-    api "androidx.room:room-ktx:$rootProject.roomVersion"
-    kapt "androidx.room:room-compiler:$rootProject.roomVersion"
+    api "androidx.room:room-rxjava2:2.2.0"
+    api "androidx.room:room-runtime:2.2.0"
+    api "androidx.room:room-ktx:2.2.0"
+    kapt "androidx.room:room-compiler:2.2.0"
 
 
 }
