--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,22 +29,22 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     testApi 'junit:junit:4.12'
     androidTestApi 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestApi 'androidx.test.ext:junit:1.1.1'
     androidTestApi 'androidx.test:runner:1.1.0'
     androidTestApi 'androidx.test:rules:1.1.0'
 
+    testImplementation "org.robolectric:robolectric:4.3.1"
+
+    testImplementation 'org.mockito:mockito-core:2.8.9'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
 
-
-
-
-
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
 
 
     implementation project(path: ':androidUtil')
