--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,22 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".test.TestActivity">
-
-        </activity>
-        <activity android:name=".sdk.GlideUseListenerActivity"></activity>
+        <activity android:name=".BleRestartActivity"></activity>
+        <activity android:name=".test.TestActivity"></activity>
+        <activity android:name=".sdk.GlideUseListenerActivity" />
         <activity android:name=".anim.MoveViewActivity" />
-        <activity android:name=".anim.PropertyAnimActivity"></activity>
+        <activity android:name=".anim.PropertyAnimActivity" />
         <activity android:name=".ui.ResultBleActivity" />
         <activity android:name=".skin.SkinStaticThemeActivity" />
         <activity android:name=".ui.GradientActivity" />
-        <activity android:name=".ui.MeasureLearnActivity" />
-        <activity android:name=".ui.CircleProgressActivity">
+        <activity android:name=".ui.MeasureLearnActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.CircleProgressActivity"></activity>
         <activity android:name=".ui.ConstraintPlaceholderActivity" />
         <activity android:name=".elec.ElecActivity" />
         <activity android:name=".MainActivity" />
