--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,13 @@
 apply from: "config.gradle"
 
 buildscript {
-    ext.kotlin_version = '1.3.40'
+    ext.kotlin_version = '1.3.50'
     repositories {
+        // 添加阿里云 maven 地址
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+
+        
         google()
         jcenter()
         
@@ -21,6 +26,11 @@ buildscript {
 
 allprojects {
     repositories {
+        // 添加阿里云 maven 地址
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+
+
         mavenLocal()
 
         google()
