--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -25,7 +25,7 @@ android {
 //            abiFilters 'armeabi', 'armeabi-v7a'
 //            //, 'x86_64', 'arm64-v8a','x86',
 //        }
-        versionName "1.0.9"
+        versionName "1.0.10"
     }
 
 
@@ -61,6 +61,9 @@ android {
 }
 
 dependencies {
+    def room_version = "2.2.5"
+
+
     testApi 'junit:junit:4.12'
     androidTestApi 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestApi 'androidx.test.ext:junit:1.1.1'
@@ -86,20 +89,30 @@ dependencies {
 //    api 'com.github.bumptech.glide:glide:4.9.0'
 //    kapt 'com.github.bumptech.glide:compiler:4.9.0'
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
-    api files('libs/mina-core-2.0.19.jar')
     implementation 'org.slf4j:slf4j-api:1.7.21'
 
     api 'org.greenrobot:eventbus:3.1.1'
 
     api 'com.tencent.mars:mars-xlog:1.2.3'
 
+//    implementation "androidx.room:room-runtime:$room_version"
+//    kapt "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+//
+//    // optional - Kotlin Extensions and Coroutines support for Room
+//    implementation "androidx.room:room-ktx:$room_version"
+//
+//    // optional - RxJava support for Room
+//    implementation "androidx.room:room-rxjava2:$room_version"
+//
+//    // optional - Guava support for Room, including Optional and ListenableFuture
+//    implementation "androidx.room:room-guava:$room_version"
+//
+//    // Test helpers
+//    testImplementation "androidx.room:room-testing:$room_version"
 
-    api "androidx.room:room-rxjava2:2.2.0"
-    api "androidx.room:room-runtime:2.2.0"
-    api "androidx.room:room-ktx:2.2.0"
-    kapt "androidx.room:room-compiler:2.2.0"
+    compile group: 'org.apache.mina', name: 'mina-core', version: '2.0.19'
 
-
+//    implementation 'top.zibin:Luban:1.1.8'
 }
 
 ext{
