--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -25,7 +25,7 @@ android {
 //            abiFilters 'armeabi', 'armeabi-v7a'
 //            //, 'x86_64', 'arm64-v8a','x86',
 //        }
-        versionName "1.0.10"
+        versionName "1.0.11"
     }
 
 
@@ -64,11 +64,11 @@ dependencies {
     def room_version = "2.2.5"
 
 
-    testApi 'junit:junit:4.12'
-    androidTestApi 'androidx.test.espresso:espresso-core:3.1.0'
-    androidTestApi 'androidx.test.ext:junit:1.1.1'
-    androidTestApi 'androidx.test:runner:1.1.0'
-    androidTestApi 'androidx.test:rules:1.1.0'
+//    testApi 'junit:junit:4.12'
+//    androidTestApi 'androidx.test.espresso:espresso-core:3.1.0'
+//    androidTestApi 'androidx.test.ext:junit:1.1.1'
+//    androidTestApi 'androidx.test:runner:1.1.0'
+//    androidTestApi 'androidx.test:rules:1.1.0'
 
 
     api 'androidx.appcompat:appcompat:1.1.0'
@@ -86,8 +86,6 @@ dependencies {
     api 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     api 'com.jakewharton.timber:timber:4.6.0'
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
-//    api 'com.github.bumptech.glide:glide:4.9.0'
-//    kapt 'com.github.bumptech.glide:compiler:4.9.0'
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
     implementation 'org.slf4j:slf4j-api:1.7.21'
 
