--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,16 +20,15 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".tool.screenshot.ScreenShortActivity"></activity>
-        <activity android:name=".permission.PermissionActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".tool.LogActivity">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".tool.location.GpsActivity"></activity>
-        <activity android:name=".tool.location.LocationActivity" />
+        <activity android:name=".ui.custom.CustomViewActivity" />
+        <activity android:name=".arch.viewmodel.ViewModelActivity"></activity>
+        <activity android:name=".time.TextClockActivity" />
+        <activity android:name=".tool.screenshot.ScreenShortActivity" />
+        <activity android:name=".permission.PermissionActivity" />
+        <activity android:name=".tool.location.GpsActivity" />
         <activity android:name=".tool.image.ImageHandleActivity" />
         <activity android:name=".tool.image.ScreenPhotoActivity" />
         <activity android:name=".tool.image.PhotoBasicsActivity" />
@@ -45,7 +44,13 @@
         <activity android:name=".ui.CircleProgressActivity" />
         <activity android:name=".ui.ConstraintPlaceholderActivity" />
         <activity android:name=".elec.ElecActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".arch.recyclerview.MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ui.ScrollPickerActivity" />
         <activity android:name=".anim.ViewAnimActivity" />
         <activity android:name=".ui.MessageActivityFragment" />
