--- a/androidUtil/build.gradle
+++ b/androidUtil/build.gradle
@@ -25,7 +25,7 @@ android {
 //            abiFilters 'armeabi', 'armeabi-v7a'
 //            //, 'x86_64', 'arm64-v8a','x86',
 //        }
-        versionName "1.0.11"
+        versionName "1.0.18"
     }
 
 
@@ -75,7 +75,7 @@ dependencies {
     api 'androidx.core:core:1.1.0'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
     api 'androidx.cardview:cardview:1.0.0'
-    api 'com.google.android.material:material:1.0.0-rc01'
+    api 'com.google.android.material:material:1.2.0-alpha06'
     // RxJava 2
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
     api 'io.reactivex.rxjava2:rxjava:2.1.15'
@@ -89,28 +89,9 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
     implementation 'org.slf4j:slf4j-api:1.7.21'
 
-    api 'org.greenrobot:eventbus:3.1.1'
-
-    api 'com.tencent.mars:mars-xlog:1.2.3'
-
-//    implementation "androidx.room:room-runtime:$room_version"
-//    kapt "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
-//
-//    // optional - Kotlin Extensions and Coroutines support for Room
-//    implementation "androidx.room:room-ktx:$room_version"
-//
-//    // optional - RxJava support for Room
-//    implementation "androidx.room:room-rxjava2:$room_version"
-//
-//    // optional - Guava support for Room, including Optional and ListenableFuture
-//    implementation "androidx.room:room-guava:$room_version"
-//
-//    // Test helpers
-//    testImplementation "androidx.room:room-testing:$room_version"
 
     compile group: 'org.apache.mina', name: 'mina-core', version: '2.0.19'
 
-//    implementation 'top.zibin:Luban:1.1.8'
 }
 
 ext{
