--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,12 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
+    dataBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.john.kot"
-        minSdkVersion 24
+        minSdkVersion 23
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -54,17 +57,9 @@ dependencies {
 
 
     // Lifecycle components
-    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.archLifecycleVersion"
-    kapt "androidx.lifecycle:lifecycle-compiler:$rootProject.archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-runtime:$rootProject.archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-common-java8:$rootProject.archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:$rootProject.archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-livedata:$rootProject.archLifecycleVersion"
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
-
 
 
 }
