--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
+    api project(path: ':androidUtil')
     testApi 'junit:junit:4.12'
     androidTestApi 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestApi 'androidx.test.ext:junit:1.1.1'
@@ -58,10 +59,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.blankj:utilcode:1.22.10'
 
-//    implementation project(path: ':androidUtil')
 //    api "com.android:util:1.0.32"
 
-    // Lifecycle components
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
