--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,17 +20,13 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.dbdraw.DatabindingDrawableActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        <activity android:name=".ui.scroll.ScrollViewActivity">
 
         </activity>
-        <activity android:name=".mvvm.LiveDataActivity"></activity>
+        <activity android:name=".ui.dbdraw.DatabindingDrawableActivity"></activity>
+        <activity android:name=".mvvm.LiveDataActivity" />
         <activity android:name=".mvvm.livedata.DetailLiveActivity" />
-        <activity android:name=".mvvm.livedata.LiveDataTestActivity"></activity>
+        <activity android:name=".mvvm.livedata.LiveDataTestActivity" />
         <activity android:name=".mvvm.demo.UseDemoActivity" />
 
         <provider
@@ -49,9 +45,9 @@
         <activity android:name=".custom.DrawPathActivity" />
         <activity android:name=".custom.StrapSleepActivity" />
         <activity android:name=".tool.date.DateActivity" />
-        <activity android:name=".ui.viewpager.ScreenSlidePagerActivity"></activity>
+        <activity android:name=".ui.viewpager.ScreenSlidePagerActivity" />
         <activity android:name=".tool.LogActivity" />
-        <activity android:name=".ui.custom.CustomViewActivity"></activity>
+        <activity android:name=".ui.custom.CustomViewActivity" />
         <activity android:name=".arch.viewmodel.ViewModelActivity" />
         <activity android:name=".time.TextClockActivity" />
         <activity android:name=".tool.screenshot.ScreenShortActivity" />
@@ -73,12 +69,16 @@
         <activity android:name=".ui.ConstraintPlaceholderActivity" />
         <activity android:name=".elec.ElecActivity" />
         <activity android:name=".arch.recyclerview.MainActivity" />
-        <activity android:name=".ui.ScrollPickerActivity" />
+        <activity android:name=".ui.ScrollPickerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".anim.ViewAnimActivity" />
         <activity android:name=".ui.MessageActivityFragment" />
-        <activity android:name=".mvvm.scrap.StrapCheckActivity">
-
-        </activity>
+        <activity android:name=".mvvm.scrap.StrapCheckActivity"></activity>
     </application>
 
 </manifest>
