--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         enabled = true
     }
     defaultConfig {
-        applicationId "com.john.kot"
-        minSdkVersion 23
+        applicationId "com.casanube.patient"
+        minSdkVersion 24
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -41,7 +41,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
-    api project(path: ':androidUtil')
     testApi 'junit:junit:4.12'
     androidTestApi 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestApi 'androidx.test.ext:junit:1.1.1'
@@ -58,12 +57,15 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.blankj:utilcode:1.22.10'
+//    api project(path: ':androidUtil')
+    api("com.android:util:1.0.36")
 
-//    api "com.android:util:1.0.32"
-
+    implementation "androidx.core:core-ktx:1.2.0"
 
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
+
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
 
 
 }
