--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         enabled = true
     }
     defaultConfig {
-        applicationId "com.casanube.patient"
+        applicationId "com.john.kot"
         minSdkVersion 24
         targetSdkVersion 24
         versionCode 1
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     testApi 'junit:junit:4.12'
     androidTestApi 'androidx.test.espresso:espresso-core:3.1.0'
     androidTestApi 'androidx.test.ext:junit:1.1.1'
@@ -57,8 +59,8 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.blankj:utilcode:1.22.10'
-//    api project(path: ':androidUtil')
-    api("com.android:util:1.0.36")
+    api project(path: ':androidUtil')
+//    api("com.android:util:1.0.36")
 
     implementation "androidx.core:core-ktx:1.2.0"
 
@@ -66,6 +68,7 @@ dependencies {
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
 
     api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
+
 
 
 }
