--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
 
     api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.3.1'
 
+    implementation 'com.permissionx.guolindev:permissionx:1.3.0'
+
+
 
 
 }
